Fixed URL-related warnings (#5254)